fix: stretch of apollon in editor view

--- a/src/main/webapp/app/modeling-assessment-editor/modeling-assessment-editor.component.scss
+++ b/src/main/webapp/app/modeling-assessment-editor/modeling-assessment-editor.component.scss
@@ -41,8 +41,7 @@ $titlebar-height: 65px;
     width: 100%;
     overflow: auto;
     jhi-modeling-assessment {
-        max-width: 100%;
-        min-width: 0;
+        flex: 1 1 auto;
     }
 }
 
